<resources>
    <string name="app_name">Pet Phone</string>
    <string name="light_drop_response">WOW!! YOU DROPPED ME!!!!</string>
    <string name="happy_face">^_____^</string>
    <string name="shocked_face">O_____O</string>
    <string name="sorry">Sorry for being careless with you!</string>
    <string name="sorryHung">Sorry! Just a moment</string>
    <string name="hello">Hello!</string>
    <string name="greeting">Howdy!</string>
    <string name="eating_s">Omnomnom...</string>
    <string name="eating_m">Sorry! Here you go!</string>
    <string name="wakeup">Sorry! Just checking something...</string>
    <string name="hungry">Hungry...</string>
    <string name="battery_below_half">Getting kind of hungry</string>
    <string name="battery_below_half_face">0_____0""</string>
    <string name="battery_low">Feed me please</string>
    <string name="battery_low_face">\@_____@</string>
    <string name="battery_very_low">Too weak… Need food…</string>
    <string name="battery_very_low_face">X_____X</string>
    <string name="battery_charging">Took you long enough!</string>
    <string name="battery_charging_face">^_____^</string>
</resources>
