<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.air.petphone.MainActivity">

    <TextView
        android:id="@+id/face"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="80sp"
        android:text="@string/happy_face"
        android:layout_marginTop="173dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/msg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/hello"
        android:layout_marginTop="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/sorryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/sorry"
        android:onClick="saySorry"
        android:layout_below="@+id/face"
        android:layout_centerHorizontal="true"
         />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting"
        android:id="@+id/hiButton"
        android:onClick="nice2m"
        android:layout_below="@+id/face"
        android:layout_marginTop="95dp"
        android:layout_centerHorizontal="true"
         />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eating_m"
        android:layout_marginTop="135dp"
        android:id="@+id/eatingButton"
        android:onClick="bonAppetite"
        android:layout_below="@+id/face"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/cantFeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sorryHung"
        android:onClick="cantFeedYou"
        android:layout_below="@+id/eatingButton"
        android:layout_alignEnd="@+id/sorryButton" />
</RelativeLayout>
